# Project-Nova

./: .cache  .gitignore  404.html  README.md  config.example.json  finetuning_gemini.py  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
friday/: app.py  load_config.py  speech_utils.py
friday/modules/: spotify.py  youtube.py
project_ash/: app.py  speech_utils.py
project_nova/: app.py  other_functions.py
project_nova/core_functions/: finetuned_gemini_call.py  llama_call.py
project_nova/logs/: log.txt
project_nova/speech_utilities/: capture_speech.py  deliver_speech_tts.py  speech_utils.py
search/: search_index.json
