[tool.poetry]
name = "friday"
version = "0.1.1"
description = "A personal assistant project"
authors = ["Arghya Sarkar <arghyasarkar.nolan@gmail.com>", "Ankush Roy <>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyttsx3 = "^2.98"
pyaudio = "^0.2.14"
speechrecognition = "^3.11.0"
google-generativeai = "^0.8.3"
spotipy = "^2.24.0"
youtube-dl = "^2021.12.17"
python-vlc = "^3.0.21203"
yt-dlp = "^2024.10.22"
gtts = "^2.5.3"
googletrans = "3.1.0a0"

[tool.poetry.scripts]
friday = "friday.app:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
